# fin_pilot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railway-start.sh  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260522_0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  bootstrap.py  session.py
apps/api/app/models/: __init__.py  ai_advice_log.py  category.py  enums.py  import_batch.py  notification_delivery_log.py  notification_device.py  password_reset_token.py  savings_goal.py  transaction.py  user.py  user_category_setting.py  user_preference.py  user_session.py
apps/api/app/schemas/: ai.py  auth.py  category.py  common.py  dashboard.py  health.py  imports.py  insights.py  notifications.py  savings_goal.py  savings_goal_intelligence.py  transaction.py  user.py
apps/api/app/services/: auth.py  categories.py  category_matching.py  csv_imports.py  dashboard.py  email.py  insights.py  notifications.py  savings_goals.py  storage.py  transactions.py  users.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_ai_api.py  test_auth_crud.py  test_auth_edge_cases.py  test_auth_isolation.py  test_category_settings_api.py  test_csv_import_api.py  test_health.py  test_insights_api.py  test_notifications_api.py  test_savings_goal_intelligence_api.py
apps/api/tests/integration/: test_ai_service.py  test_schema.py
(+92 files in other folders)
